# AlphaSettler

./: .gitignore  BOTTLENECK_ANALYSIS.py  CMakeLists.txt  DEVELOPMENT_NOTES.md  OPTIMIZATION_PLAN.md  README.md  STATUS.md  _eval_checkpoints.py  deploy_pace.sh  requirements.txt  run_interactive.sh  run_training.sh  setup.py  test_complete.py
include/: action.h  batched_evaluator.h  board_grid.h  dev_cards.h  game_state.h  move_gen.h  player_state.h  resources.h  state_encoder.h  state_transition.h
include/mcts/: alphazero_mcts.h  mcts_agent.h  mcts_node.h  mcts_search.h
python/: README_NN.md  __init__.py  bindings.cpp  catan_network.py  config.py  eval_agents.py  eval_alphazero.py  parallel_selfplay.py  state_encoder.py  state_encoder_full.py  test_alphazero.py  test_batched.py  test_bindings.py  test_nn_integration.py  train_alphazero.py
python/agents/: __init__.py  alphazero_agent.py  random_agent.py
python/benchmark/: mcts_depth_analysis.py  parallel_benchmark.py  single_game.py
src/: batched_evaluator.cpp  board_grid.cpp  game_state.cpp  move_gen.cpp  state_encoder.cpp  state_transition.cpp
src/mcts/: alphazero_mcts.cpp  mcts_agent.cpp  mcts_search.cpp
tests/: test_game_state.cpp  test_mcts.cpp  test_mcts_agent.cpp  test_move_gen.cpp  test_state_transition.cpp  test_visualize_grid.cpp
